syntax = "proto3";

package kit.iron.api.navo.auth;

import "github.com/micro/go-api/proto/api.proto";

service AuthHandler {
  rpc Login(go.api.Request) returns (go.api.Response) {}
  rpc Register(go.api.Request) returns (go.api.Response) {}
}