syntax = "proto3";

package iunite.club.srv.user.secruity;

service Secruity {
  rpc Signin(AuthRequest) returns(AuthResponse) {}
  rpc SignupWithMobile(SignupWithMobileRequest) returns(SignupResponse) {}
  rpc GetUserIDFromToken(TokenRequest) returns(UserIDResponse) {}
}

message TokenRequest {
  string Token = 1;
}

message UserIDResponse {
  string UserID = 1;
}

message SignupWithMobileRequest {
  string Password = 1;
  string School = 2;
  string Mobile = 3;
  int32 MobileAreaCode = 4;
  string ValidateCode = 5;
  string FirstName = 6;
  string LastName = 7;
  string ConfirmPassword = 8;
}

message SignupResponse {
  bool OK = 1;
  string Token = 2;
  int64 TokenExpiredAt = 3;
}

message AuthRequest {
  string Identify = 1;
  string Password = 2;
}

message AuthResponse {
  string Token = 1;
  int64 ExpiredAt = 2;
}